--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,20 @@
+.main{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+}
+.todos{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+}
+ul{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
